[package]
name = "hammerload"
version = "0.6.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7.5.4"
indicatif = "0.18.3"
async-trait = "0.1.89"

tonic = { version = "0.14.2", features = ["transport"] }
anyhow = "1.0.100"
prost = "0.14.1"
prost-types = "0.14.1"
prost-reflect = { version = "0.16", features = ["derive", "serde"] }
tonic-reflection = "0.14.2"
serde = "1.0.228"
serde_json = "1.0.145"
bytes = "1.11.0"
protox = "0.9.1"
tower = "0.5.2"
"http" = "1.4.0"
